<resources>
    <string name="app_name">SchoolSecondMarket</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱地址无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">这行必须填写</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">注册</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="input_email">请输入邮箱</string>
    <string name="input_username">姓名</string>
    <string name="input_password">请输入密码</string>
    <string name="register_passwordForaffirm">请确定你的密码</string>
    <string name="hello_world">hello_world</string>
</resources>
