<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pzy.chopin.schoolsecondmarket.activity.Register">

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/reigster_useremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_email"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/reigster_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_username"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/reigster_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

        <EditText
            android:id="@+id/reigster_passwordForaffirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_passwordForaffirm"
            android:maxLines="1"
            android:inputType="textPassword"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:background="@color/colorLogin_register_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="注册"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:id="@+id/btn_register_comfirge"/>

</LinearLayout>
